@@ -11,6 +11,9 @@ Unreleased changes (1.0-dev)
     (Eelco Lempsink via ab)
 
  4. NUTCH-456 - Parse msexcel plugin speedup (Heiko Dietze via siren)
+
+ 5. NUTCH-446 - RobotRulesParser should ignore Crawl-delay values of other
+    bots in robots.txt (Dogacan Guney via siren)
  
 
 Release 0.9 - 2007-04-02
